started media queries

--- a/RoryK/Rory Website/CSS/media-queries.css
+++ b/RoryK/Rory Website/CSS/media-queries.css
@@ -1,2 +1,18 @@
 /* CSS Breakpoints */
 /* Phone */
+
+@media only screen and (max-width : 600px) {
+   
+    header {background-color: black;}
+
+
+header div,
+section nav,
+footer,
+.content {
+    width: 100%;
+    padding: 0;
+}
+
+
+}
